--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 {% block styles %}
 {{ super() }}
 	<style>
-		body { background: #e8f1f9; }
+		body { background: #C5D4E3; }
 	</style>
 {% endblock %}
 
@@ -19,15 +19,18 @@ HOLE IN ONE
 <div class="container">
   <div class="row">
     <div class="col-md-10 col-lg-8 mx-lg-auto mx-md-auto">
+      <img style="background: transparent; height: 200px; margin-top: 30px" src="{{url_for('static', filename='golf.jpg')}}"/>
 
       <h1 class="pt-5 pb-2">Let's play golf!</h1>
+      <h2 class="pb-2">Can you hit a whole in one?</h2>
 
-      <p class="lead">The wind is blowing NE at 5ft/s. So take your best swing.</p>
-      <img src="golf.jpg"/>
+      <p class="lead pb-2">The wind is blowing NE at 5 ft/s. The hole is 500 ft away. So take your best swing.</p>
 
       {{ wtf.quick_form(form) }}
 
-      <p class="pt-5"><strong>{{ message }}</strong></p>
+      <h3 style="color: #5400AD;" class="pt-5"><strong>{{ message }}</strong></h3>
+      <img style="background: transparent; height: 200px; margin-top: 30px" src="{{url_for('static', filename=image)}}"/>
+      <p class="lead pb-2">Your ball landed here: {{miss}}</p>
 
     </div>
   </div>
