--- a/templates/index.html
+++ b/templates/index.html
@@ -22,14 +22,14 @@ HOLE IN ONE
       <img style="background: transparent; height: 200px; margin-top: 30px" src="{{url_for('static', filename='golf.jpg')}}"/>
 
       <h1 class="pt-5 pb-2">Let's play golf!</h1>
-      <h2 class="pb-2">Can you hit a whole in one?</h2>
+      <h2 class="pb-2">Can you hit a hole in one?</h2>
 
       <p class="lead pb-2">The wind is blowing NE at 5 ft/s. The hole is 500 ft away. So take your best swing.</p>
 
       {{ wtf.quick_form(form) }}
 
       <h3 style="color: #5400AD;" class="pt-5"><strong>{{ message }}</strong></h3>
-      <img style="background: transparent; height: 200px; margin-top: 30px; display: {{initial}};" src="{{url_for('static', filename=image)}}"/>
+      <img style="background: transparent; height: 200px; margin-top: 5px; display: {{initial}};" src="{{url_for('static', filename=image)}}"/>
       <p style="display: {{landed}};" class="lead pb-2">Your ball landed here: {{miss}}</p>
 
     </div>
