--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@ HOLE IN ONE
       <h1 class="pt-5 pb-2">Let's play golf!</h1>
       <h2 class="pb-2">Can you hit a hole in one?</h2>
 
-      <p class="lead pb-2">The wind is blowing NE at 5 ft/s. The hole is 500 ft away. So take your best swing.</p>
+      <p class="lead pb-2">The wind is blowing NE at 5 ft/s. You are at point (0, 0). The hole is at (500, 500)ft away. Take your best swing.</p>
 
       {{ wtf.quick_form(form) }}
 
